src/objects/c2g__DataViewJoinFilter__c.object
<CustomObject>
    <description>Stores the expression that serves as a filter to restrict the data included by a dataview join.</description>
    <fields>
        <fullName>c2g__ClosingBrackets__c</fullName>
        <label>Closing Brackets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CombineType__c</fullName>
        <label>Combine Type</label>
        <picklist>
            <picklistValues>
                <fullName>And</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Or</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__DataViewField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataView Field</label>
        <referenceTo>c2g__DataViewField__c</referenceTo>
        <relationshipLabel>Dataview Join Filters</relationshipLabel>
        <relationshipName>DataViewJoinFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DataViewJoin__c</fullName>
        <label>DataView Join</label>
        <referenceTo>c2g__DataViewJoin__c</referenceTo>
        <relationshipLabel>Dataview Join Filters</relationshipLabel>
        <relationshipName>DataviewJoinFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__From__c</fullName>
        <label>From</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OpeningBrackets__c</fullName>
        <label>Opening Brackets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>does not contain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>starts with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not in range</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__To__c</fullName>
        <label>To</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Dataview Join Filter</label>
    <nameField>
        <displayFormat>DJF-{0000}</displayFormat>
        <label>Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dataview Join Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>